# GenTest4AI

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
ai_api_testing/agents/: agent_specs_extractor.py  api_specs_extractor.py
ai_api_testing/agents/api_specs/: api_specs_extractor.py  base_extractor.py  fastapi_extractor.py  swagger_extractor.py
ai_api_testing/agents/api_specs_agents/: fastapi_extractor.py  swagger_extractor.py
ai_api_testing/agents/promp_templates/ML_API/: ml_generator_prompt.py
ai_api_testing/agents/promp_templates/general_API/: api_generator_prompt.py
ai_api_testing/agents/test_generator_agents/: case_family_agent.py  case_test_generator_agent.py  executor.py  orchestrator.py  user_persona_modelling_agent.py
ai_api_testing/agents/test_generator_agents/promp_templates/ML_API/: ml_family_prompt.py
ai_api_testing/agents/test_generator_agents/promp_templates/general_API/: api_family_prompt.py
ai_api_testing/cli/: main.py
ai_api_testing/core/: models.py
ai_api_testing/utils/: logger.py
examples/: 01_extract_swagger_specs.ipynb  02_api_test_case_generator.ipynb  02_test_case_generator.ipynb  03_ml_scenario_simulator.ipynb  04_nn_scenario_simulation.ipynb
tests/agents/: test_api_specs_extractor.py
tests/agents/api_specs/: test_fasstapi_extractor.py  test_swagger_extractor.py
tests/utils/: test_logger.py
