[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-api-testing"
version = "0.1.0"
description = "ðŸ¦AI test generator for APIs and agentic workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.12.3",
    "loguru>=0.7.3",
    "playwright>=1.49.1",
    "pydantic-ai>=0.0.16",
    "pydantic-settings>=2.7.1",
    "typer>=0.15.1",
]

[dependency-groups]
lint = [
    "mypy>=1.11.2",
    "pyright>=1.1.388",
    "ruff>=0.8.4",
    "pre-commit>=4.0.1",
]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    # Testing dependencies
    "aiounittest>=1.4.2",
    "fastapi[standard]>=0.115.6",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

[project.scripts]
ai-api-testing = "ai_api_testing.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["ai_api_testing"]
include-metadata = true

[tool.ruff]
line-length = 120
exclude = ["examples/**"]

[tool.ruff.lint]
extend-select = [
    "Q",
    "RUF100",
    "C90",
    "UP",
    "I",
    "D",
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true, known-first-party = ["pydantic_ai"] }
mccabe = { max-complexity = 15 }
ignore = [
    "D100", # ignore missing docstring in module
    "D102", # ignore missing docstring in public method
    "D104", # ignore missing docstring in public package
    "D105", # ignore missing docstring in magic methods
    "D107", # ignore missing docstring in __init__ methods
    "Q000", # ignore bad quotes
    "Q003", # ignore bad quotes
]


[tool.ruff.lint.pydocstyle]
convention = "google"
